@@ -68,6 +68,7 @@
 * Mango will now fail to start if the env.properties file has POSIX "others" read/write permissions. You must manually adjust the permissions on your env.properties file so it is not readable or writable by "others".
 * $MA_HOME/overrides/classes and $MA_HOME/overrides/properties are no longer added to the classpath via the default start up scripts.
 * Support OAuth2 and OpenID Connect authentication via Spring Security (configurable via env.properties)
+* System login events are now instantaneous events and no longer "return to normal" on logout
 
 *Version 3.7.4*
 * Improve work item failure logging
